--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Saroj Chaudhary -->
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=equal, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<span style="font-style: initial;"></span>
 	<title>Saroj Chaudhary</title>
 </head>
