--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			<img src="Img/Pankesh.jpg" width="90%;" ><a href="https://www.facebook.com/pankesh.chy/"><h1 style="font-size: medium;">Pankesh Dangaura</h1></a>
 		</div>
         
-        <!-- <div class="column">
+        <div class="column">
 			<img src="Img/Karishma.jpg" width="90%;"><a href="https://www.facebook.com/karishma.mahatou"><h1 style="font-size: medium;">Karishma Mahatou</h1></a>
-		</div> -->
+		</div>
 
 		<div class="column">
 			<img src="Img/Shakti.JPG" width="90%;"><a href="https://www.facebook.com/profile.php?id=100077504798996"><h1 style="font-size: medium;">Shaktiman Budhathoki</h1></a>
@@ -63,6 +63,14 @@
 	
 		<div class="column">
 			<img src="Img/Chakra.jpg" width="90%;"><a href="https://www.facebook.com/profile.php?id=61555399496611"><h1 style="font-size: medium;">Chakra Gharti Magar</h1></a>
+		</div>
+		
+		<div class="column">
+			<img src="" width="90%;"><a href="https://www.facebook.com/profile.php?id=61555399496611"><h1 style="font-size: medium;">Samir Dangaura</h1></a>
+		</div>
+		
+		<div class="column">
+			<img src="" width="90%;"><a href="https://www.facebook.com/profile.php?id=61555399496611"><h1 style="font-size: medium;">Niranjan Chaudhary</h1></a>
 		</div>
 	</div>
 	
