--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</div>
 		
 		<div class="column">
-			<img src="" width="90%;"><a href="https://www.facebook.com/profile.php?id=61555399496611"><h1 style="font-size: medium;">Niranjan Chaudhary</h1></a>
+			<img src="https://github.com/Sarojchaudhary815/Friends/blob/main/Img/Nirajan.jpg?raw=true" width="90%;"><a href="https://www.facebook.com/profile.php?id=61555399496611"><h1 style="font-size: medium;">Niranjan Chaudhary</h1></a>
 		</div>
 	</div>
 	
